Fix stretched tentacule in about page's separator

--- a/src/assets/scss/6-pages/context.scss
+++ b/src/assets/scss/6-pages/context.scss
@@ -101,7 +101,8 @@
   width: 3rem;
   height: 2.7rem;
   background: $color-bg no-repeat url("/src/assets/img/separator-tentacle.svg");
-  background-size: 100% 100%;
+  background-size: auto 100%;
+  background-position: center;
   content: "";
 }
 
